# emoji_gen

./: .gitignore  .gitmessage  CLAUDE.md  Cargo.toml  Dockerfile  README.md  RELEASING.md  docker-dev.sh
.claude/skills/git-tag-release/: SKILL.md  quick-reference.md  tag-release.sh
.claude/skills/git-workflow/: pr-template.md
.claude/skills/release-process/: checklist.md  version-helper.sh
.github/: CONTRIBUTING.md
.github/workflows/: release.yml  rust.yml  security.yml
docs/: emoji_gen_implementation_plan.txt  next.md
prompts/: 2025-12-20.md
src/: lib.rs  main.rs
